[tool.poetry]
name = "graphinder"
version = "1.7.0"
description = "Escape Graphinder"
authors = ["Escape Technologies SAS <ping@escape.tech>"]
maintainers = [
    "Karim Rustom <rustom@escape.tech>",
    "Antoine Carossio <antoine@escape.tech>",
    "Swan <swan@escape.tech>"
]
license = "MIT"
packages = [
    { include = "graphinder" }
]
include = [
    "LICENSE",
]
readme = "README.md"
"homepage" = "https://escape.tech/"
"repository" = "https://github.com/Escape-Technologies/graphinder"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Escape-Technologies/graphinder/issues"

[tool.poetry.scripts]
graphinder = 'graphinder:cli'

[tool.coverage.run]
omit = [
    'graphinder/__main__.py',
    'tests/*'
]

[tool.pytest.ini_options]
asyncio_mode = 'strict'

[tool.poetry.dependencies]
aiohttp = "^3.8.1"
beautifulsoup4 = ">=4,<5"
cchardet = "^2.1.7"
python = ">=3.7,<3.11"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
docformatter = "^1.4"
isort = "^5.10.1"
mypy = "^0.921"
poetryup = "^0.3.15"
pylint = "^2.12.2"
pylint-quotes = "^0.2.3"
pytest = "^6.2.5"
pytest-asyncio = "^0.18.3"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"
pytest-rerunfailures = "^10.2"
setuptools = "^45"
snakeviz = "^2.1.1"
types-PyYAML = "^5.4.12"
types-requests = "^2.27.6"
unify = "^0.5"
vulture = "^2.3"
yapf = "^0.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
