[tool.poetry]
name = "graphinder"
version = "1.8.0"
description = "Escape Graphinder"
authors = ["Escape Technologies SAS <ping@escape.tech>"]
maintainers = [
    "Karim Rustom <rustom@escape.tech>",
    "Antoine Carossio <antoine@escape.tech>",
    "Swan <swan@escape.tech>"
]
license = "MIT"
packages = [
    { include = "graphinder" }
]
include = [
    "LICENSE",
]
readme = "README.md"
"homepage" = "https://escape.tech/"
"repository" = "https://github.com/Escape-Technologies/graphinder"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Escape-Technologies/graphinder/issues"

[tool.poetry.scripts]
graphinder = 'graphinder:cli'

[tool.coverage.run]
omit = [
    'graphinder/__main__.py',
    'tests/*'
]

[tool.pytest.ini_options]
asyncio_mode = 'strict'

[tool.poetry.dependencies]
aiohttp = {extras = ["speedups"], version = "^3.8.1"}
beautifulsoup4 = ">=4,<5"
python = ">=3.7,<3.11"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
docformatter = "^1.4"
isort = "^5.10.1"
mypy = "^0.921"
poetryup = "^0.9.0"
pylint = "^2.12.2"
pylint-quotes = "^0.2.3"
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"
pytest-rerunfailures = "^10.2"
setuptools = "^45"
snakeviz = "^2.1.1"
types-PyYAML = "^6.0.11"
types-requests = "^2.28.6"
types-setuptools = "^63.4.0"
unify = "^0.5"
vulture = "^2.3"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
