[tool.poetry]
name = "graphinder"
version = "2.0.0b4"
description = "Escape Graphinder"
authors = ["Escape Technologies SAS <ping@escape.tech>"]
maintainers = [
    "Karim Rustom <rustom@escape.tech>",
    "Antoine Carossio <antoine@escape.tech>",
    "Swan <swan@escape.tech>"
]
license = "MIT"
packages = [
    { include = "graphinder" }
]
readme = "README.md"
"homepage" = "https://escape.tech/"
"repository" = "https://github.com/Escape-Technologies/graphinder"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Escape-Technologies/graphinder/issues"

[tool.poetry.scripts]
graphinder = 'graphinder:cli'

[tool.coverage.run]
omit = [
    'graphinder/__main__.py',
    'tests/*'
]

[tool.pytest.ini_options]
asyncio_mode = 'strict'

[tool.poetry.dependencies]
aiohttp = {extras = ["speedups"], version = "^3.8.1"}
beautifulsoup4 = ">=4,<5"
python = ">=3.10,<4.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
autoflake = "^2.0"
docformatter = "^1.5"
isort = "^5.10.1"
mypy = "^0.982"
poetryup = "^0.12.3"
pylint = "^2.15.9"
pylint-quotes = "^0.2.3"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.2"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
pytest-rerunfailures = "^10.3"
setuptools = ">=50"
snakeviz = "^2.1.1"
types-PyYAML = "^6.0.12"
types-requests = "^2.28.11"
types-setuptools = "^65.5.0"
unify = "^0.5"
vulture = "^2.6"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
